c/examples/writing-a-c-compiler-tests/tests/chapter_11/valid/libraries/return_long.c
long add(int a, int b) {
    return (long) a + (long) b;
}