c/examples/writing-a-c-compiler-tests/tests/chapter_11/invalid_parse/fun_name_long.c
/* Because long is a keyword, you can't use it as a function name */
int long(void) {
    return 4;
}

int main(void){
    return long();
}